kubernetes/yaml/service-mesh/istio/gateway.yaml
# istio gateway yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
spec:
    selector:
        istio: ingressgateway # use istio default ingress gateway
    servers:
      - port:
          number: 80
          name: http
          protocol: HTTP
        hosts:
          - "*"
