kubernetes/yaml/service-mesh/istio/traffic-mirror.yaml
# HTTP的流量镜像 virtualService for traffic mirroring
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: traffic-mirror
spec:
    hosts:
    - "*"
    gateways:
    - istio-system/istio-autogenerated-k8s-ingress
    http:
    - match:
        - uri:
            prefix: /v1
      route:
        - destination:
            # 主服务
            # host: svc的名称，如果跨namespace，需要加上namespace的后缀
            host: httpbin.default.svc.cluster.local
            # subset 为主服务的版本
            subset: v1
      mirror:
        # 镜像服务
        - host: httpbin.default.svc.cluster.local
          subset: v2
